[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/visual/ui/dialogue/dialogue_character_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/visual/ui/dialogue/dialogue_text_background.png" type="Texture" id=2]
[ext_resource path="res://scripts/TypewriterDialog.gd" type="Script" id=3]
[ext_resource path="res://font_presets/font_middle.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/visual/ui/dialogue/dialogue_character_circle.png" type="Texture" id=5]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_focused.png" type="Texture" id=7]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_disabled.png" type="Texture" id=8]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_normal.png" type="Texture" id=9]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_hover.png" type="Texture" id=10]
[ext_resource path="res://font_presets/font_small.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_normal_left.png" type="Texture" id=12]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_disabled_left.png" type="Texture" id=13]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_pressed_left.png" type="Texture" id=14]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_focused_left.png" type="Texture" id=15]
[ext_resource path="res://assets/visual/ui/dialogue/decision_buttons/decision_btn_hover_left.png" type="Texture" id=16]

[node name="TypewriterDialog" type="Node2D"]
script = ExtResource( 3 )

[node name="TextBgSprite" type="Sprite" parent="."]
position = Vector2( 160, 574 )
texture = ExtResource( 2 )
centered = false

[node name="TextLabel" type="Label" parent="TextBgSprite"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1040.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 4 )
text = "Dialog text placeholder."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharSprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
offset = Vector2( 64, 574 )

[node name="CharAvatarSprite" type="Sprite" parent="CharSprite"]
texture = ExtResource( 5 )
centered = false
offset = Vector2( 64, 574 )

[node name="DecisionButtonNode" type="Node2D" parent="."]
position = Vector2( 352, 446 )

[node name="DialogBranchShowcase" type="Sprite" parent="DecisionButtonNode"]
position = Vector2( -352, -336 )
texture = ExtResource( 1 )
offset = Vector2( 640, 432 )

[node name="LeftDecisionButton" type="TextureButton" parent="DecisionButtonNode"]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftLabel" type="Label" parent="DecisionButtonNode/LeftDecisionButton"]
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 11 )
text = "Left label"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightDecisionButton" type="TextureButton" parent="DecisionButtonNode"]
margin_left = 320.0
margin_right = 576.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 13 )
texture_focused = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLabel" type="Label" parent="DecisionButtonNode/RightDecisionButton"]
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 11 )
text = "Right label"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DecisionButtonNode/LeftDecisionButton" to="." method="_on_LeftDecisionButton_pressed"]
[connection signal="pressed" from="DecisionButtonNode/RightDecisionButton" to="." method="_on_RightDecisionButton_pressed"]
